greetings-service/deploy/deploy.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
  name: greetings-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        app: fuse-circuit-breaker-mission-greetings-service
        provider: fabric8
        group: com.redhat.fuse.boosters
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: greetings-service-config
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: greetings-service
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: greetings-service
        volumeMounts:
          - name: config-volume
            mountPath: /deployments/application.properties
            subPath: application.properties
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - greetings-service
      from:
        kind: ImageStreamTag
        name: greetings-service
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
  name: greetings-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
