greetings-service/deploy/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
  name: greetings-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: fuse-circuit-breaker-mission-greetings-service
    provider: fabric8
    group: com.redhat.fuse.boosters
  name: greetings-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: greetings-service
